# Cosmo_Ai

./: .gitignore  20.txt  50.txt  CHANGELOG.md  CMakeLists-idun.txt  CMakeLists.txt  Data_generator.cpp  Dockerfile  GL_Simulator_2.cpp  IDUN.md  LICENSE  README.md  Simulator.cpp  Simulator.h  TODO  amplitudes.sh  amplitudes.slurm  amplitudes200.slurm  amplitudes50.slurm  bin  build.sh  conanfile.py  conanfile.txt  config.sh  currenttest.sh  data_generator.cpp  datagen.sh  datasetgen.py  functions_16.txt  functions_18.txt  functions_20.txt  generate_all.cpp  idunbuild.sh  main.cpp  new_data_gen.cpp  performance.slurm  performance200.slurm  requirements.txt  test.sh  triangle.sh
.github/actions/build-darwin/: action.yml
.github/actions/build-linux/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/hello-world/: action.yml
.github/attic/: build-all-legacy.yml
.github/workflows/: README.md  arm64.yml  build-all.yml  comprehensive-test.yml  config.yml  darwin.yml  regressiontest.yml  release-example.yml  release.yml  test.yml  testrun.yml  trial-run.yml
CosmoAI_qt/: CosmoAI_qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
CosmoAI_qt/icons/: CosmoAI_osx.icns
CosmoGUI/: CMakeLists.txt  cosmogui.cpp  cosmogui.h  cosmogui.ui  main.cpp
CosmoSimPy/: .gitignore  Arguments.py  README.md  amplitudes.py  compare.py  datagen.py  datasetgen.py  roulettegen.py
CosmoSimPy/CosmoSim/: Controller.py  Image.py  View.py  __init__.py
Datasets/: README.md  debug.csv  mask.csv  performance.py  roulletedemo.csv  smaller-sphere-pm.py  sphere-pm.csv  sphere-pm.py  triangle.csv  triangle2.csv
Deploy/: linux_deploy.sh
MachineLearning/: CosmoCNN.py  Dataset.py  MLSystem.py  Network.py  aux.py  best_test_in_the_west.py  cputest.py  deepshit.py
MachineLearning/Legacy/: cnn_mini.py
Python/: Amplitudes_gen.py  Arguments.py  CosmoCNN.py  CosmoCNN_idun.py  CosmoGUI.py  README.md  alphas  amplitudes.py  analyze.py  best_test_in_the_west.py  betas  centreimage.py  cnn_mnist.py  compare.py  datagen.py  dataget.py  deepshit.py  job.slurm  make_random.py  makeimage.py  multi_gen.py  roulettegen.py  spherical_python_prototype.py  testcosmosim.py
Python/CosmoSim/: 50.txt  Controller.py  Image.py  View.py  __init__.py
Python/Models/: 1  10  11  2  3  4  5  6  7  8  9  n  n1  n2  new
Python/test/: params.csv
Python/train/: params.csv
RegressionTest/: Makefile  debug.csv  makefile-template
RegressionTest/amplitudes/: Makefile  amreg200.slurm  amreg50.slurm  pythonenv.config
RegressionTest/exactpm/: Makefile  debug.csv
RegressionTest/raytrace/: Makefile  debug.csv
RegressionTest/rotatedsis/: debug.csv
RegressionTest/roulette/: debug.csv
RegressionTest/roulettelens/: baseline.config  makeimages.sh  roulette.csv
RegressionTest/roulettepm/: debug.csv
Scripts/: allmodels.sh  centreimage.py  cleanartifacts.py  currenttest.sh  datagen.sh  datasetgen.py  markmask.sh  montage.sh  polargen.sh  regressiontest.sh  rotatetest.sh  rotationdebug.sh  second.sh  test.sh  triangle.sh  ximovetest.sh
Test/: spheres.csv
Test/outcsv/: debug.csv  outcsv.sh
Test/pointmass/: pmtest.sh
Test/psifunction/: samplingtest.sh
Test/puresampling/: samplingtest.sh  spheres.csv
Test/rotation/: debug.sh  rotatetest.sh
Test/roulettelens/: Makefile  debug.csv  montageimages.sh  noeta.csv  test.sh
Test/roulettesis/: Makefile  test.sh
Test/sampling/: samplingtest.sh  time.csv  time.sh
Tests/: config.sh
ValidationTest/roulettelens/: Makefile  montageimages.sh  pm.csv  test.sh
ValidationTest/xireference/: Makefile  config.sh
data/cosmo_data/: cosmo_data.csv  datapoint0.json  datapoint1.json  datapoint10.json  datapoint100.json  datapoint101.json  datapoint102.json  datapoint103.json  datapoint104.json  datapoint105.json  datapoint106.json  datapoint107.json  datapoint108.json  datapoint109.json  datapoint11.json  datapoint110.json  datapoint111.json  datapoint112.json  datapoint113.json  datapoint114.json  datapoint115.json  datapoint116.json  datapoint117.json  datapoint118.json  datapoint119.json  datapoint12.json  datapoint120.json  datapoint121.json  datapoint122.json  datapoint123.json  datapoint124.json  datapoint125.json  datapoint126.json  datapoint127.json  datapoint128.json  datapoint129.json  datapoint13.json  datapoint130.json  datapoint131.json  datapoint132.json  (+961 more)
docker-sim/: Dockerfile
docs/: Makefile  calculation.tex  lensmodel.tex  points.tex  relativeeta.tex  source.tex
include/cosmosim/: Lens.h  LensFunction.h  PixMap.h  Roulette.h  SampledLens.h  Simulator.h  Source.h
slurm/: README.md  amplitudes100.slurm  ellipse50.slurm  ellipse8.slurm  pythonenv.config  regression.slurm
src/: CMakeLists.txt  CosmoSim.cpp  CosmoSim.h  Data_generator.cpp  EllipsoidSource.cpp  GL_Simulator_2.cpp  LensModel.cpp  PointMassLens.cpp  PointMassSimulator.cpp  RoulettePMLens.cpp  Simulator.cpp  Simulator.h  Source.cpp  Source.h  SphereLens.cpp  SphereSimulator.cpp  SphericalSource.cpp  TriangleSource.cpp  Window.cpp  Window.h  makeimage.cpp  roulettetest.cpp  simaux.cpp  testmask.cpp
src/Legacy/: PMCLens.cpp  SampledRouletteLens.cpp
src/cosmosimpy/: CosmoSim.cpp  CosmoSim.h  RouletteSim.cpp
src/makeimage/: makeimage.cpp
src/simlib/: EllipsoidSource.cpp  ImageSource.cpp  Lens.cpp  LensMap.cpp  LensModel.cpp  PMCLens.cpp  PixMapLens.cpp  PointMass.cpp  PointMassExact.cpp  PointMassLens.cpp  PointMassRoulette.cpp  PsiFunctionLens.cpp  PsiFunctionModel.cpp  PureSampledLens.cpp  PureSampledModel.cpp  PureSampledSISLens.cpp  RaytraceModel.cpp  RotatedModel.cpp  RouletteAbstractLens.cpp  RouletteLens.cpp  RouletteModel.cpp  RoulettePMCLens.cpp  RoulettePMLens.cpp  RouletteRegenerator.cpp  RouletteSISLens.cpp  SIE.cpp  SIS.cpp  SampledLens.cpp  SampledPsiFunctionLens.cpp  SampledRouletteLens.cpp  SampledSISLens.cpp  Source.cpp  SphereLens.cpp  SphericalSource.cpp  TriangleSource.cpp  simaux.cpp  simaux.h
src/simulator/: Simulator.cpp  Window.cpp  Window.h
